--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@angular-eslint/template-parser": "^18.4.0",
     "@angular/cli": "~18.2.10",
     "@angular/compiler-cli": "18.2.9",
+    "@angular/google-maps": "^19.0.3",
     "@angular/language-service": "18.2.9",
     "@angular/pwa": "18.2.10",
     "@nestjs/schematics": "^10.2.2",
@@ -116,7 +117,6 @@
     "@typescript-eslint/utils": "8.11.0",
     "autoprefixer": "10.4.20",
     "chroma-js": "3.1.2",
-    "ngx-mat-select-search": "^7.0.7",
     "eslint": "~9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "install": "^0.13.0",
@@ -130,6 +130,7 @@
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
     "lodash": "4.17.21",
+    "ngx-mat-select-search": "^7.0.7",
     "npm": "^10.9.0",
     "nx": "20.0.6",
     "postcss": "8.4.47",
